# ChangeLog for app-portage/gentoolkit-dev
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.135 2014/05/03 20:58:27 floppym Exp $

  03 May 2014; Mike Gilbert <floppym@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Add python3.4.

  21 Mar 2014; Mikle Kolyada <zlogene@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  ppc stable wrt bug #492236

  20 Mar 2014; Mike Frysinger <vapier@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Mark arm64/m68k/s390/sh stable.

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Stable for alpha, wrt bug #492236

  14 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Stable for ppc64, wrt bug #492236

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Stable for sparc, wrt bug #492236

  10 Mar 2014; Johannes Huber <johu@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  x86 stable, bug #492236

  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> gentoolkit-dev-0.2.8.3-r1.ebuild:
  amd64 stable, bug #492236

  20 Feb 2014; Markus Meier <maekke@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  arm stable, bug #492236

  20 Feb 2014; Akinori Hattori <hattya@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  ia64 stable wrt bug #492236

  18 Feb 2014; Jeroen Roovers <jer@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Stable for HPPA (bug #492236).

  01 Feb 2014; Vikraman Choudhury <vikraman@gentoo.org>
  gentoolkit-dev-9999.ebuild:
  Use PV, not PF, for VERSION

  19 Jan 2014; Mike Frysinger <vapier@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild, gentoolkit-dev-0.2.8.3.ebuild,
  gentoolkit-dev-0.2.8.ebuild:
  Add arm64 love.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org>
  gentoolkit-dev-0.2.8.3-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  13 Jul 2013; Fabian Groffen <grobian@gentoo.org>