@@ -1,6 +1,13 @@
 # ChangeLog for app-portage/gentoolkit-dev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.135 2014/05/03 20:58:27 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit-dev/ChangeLog,v 1.137 2014/11/18 08:53:38 mgorny Exp $
+
+  18 Nov 2014; Michał Górny <mgorny@gentoo.org>
+  gentoolkit-dev-0.2.8.3-r1.ebuild, gentoolkit-dev-9999.ebuild:
+  Forward-port python-r1 change into -9999. Wrap ekeyword as well.
+
+  18 Nov 2014; Michał Górny <mgorny@gentoo.org> gentoolkit-dev-9999.ebuild:
+  Switch to git-r3.
 
   03 May 2014; Mike Gilbert <floppym@gentoo.org>
   gentoolkit-dev-0.2.8.3-r1.ebuild:
